# discovery-engine-public

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOVER-de-filter-fix.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  tasks.yaml
.plan/: tasks.yaml
.reports/: feasibility-sources-dimension.md
app/: config.py  dependencies.py  main.py
config/: api-keys.yaml  archetypes.yaml  data-quality.yaml  data-sources.yaml  enrichment.yaml  portals.yaml  resolution.yaml  scoring-profile.local.yaml.example  scoring-profile.yaml  scoring.yaml  sources.yaml
data/: geonames-de-subset.csv
docs/: EVAL.md  SCORING.md  architecture-target-v2.html  ats-enumerability.md  ats-pipeline.md  dataflow.html
migrations/: README.md  atomic-refine-claim.sql  ats-companies-drop-urls.sql  ats-companies-registry.sql  ats-companies-rename-fk.sql  ats-scan-runs-add-lever-stage.sql  ats-scan-runs.sql  bundle-b-additive.sql  company-profiles-write-lockdown.sql  cross-source-dedup-content-hash.sql  dedup-company-noise-escape.sql  dedup-memory.sql  drop-jobs-v2-score-stage-1.sql  drop-raw-data.sql  fetch-cache.sql  harden-rpcs-execute-search-path.sql  jobs-fts-index.sql  jobs-search-ranked.sql  jobs-trgm-index.sql  jobs-v1-drop.sql  jobs-v2-drop-remote-column.sql  jobs-v2-mark-expired.sql  jobs-v2-parallel.sql  jobs-v2-retention.sql  raw-jobs-inbox-dedup.sql  raw-jobs-store-first.sql  refine-runs.sql  rls-internal-tables.sql  rls-new-tables.sql  rls-pipeline-config-tables.sql  rls-tenant-schema.sql  scrape-runs.sql  sources-dimension.sql
scripts/: ats_scanner.py  (+17 more)
(+144 files in other folders)
