[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discovery-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn",
    "pydantic>=2.0",
    "pydantic-settings",
    "supabase",
    "httpx",
    "python-jobspy",
    "feedparser",
    "openai",
    "anthropic",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
